@@ -79,7 +79,7 @@ is_local_dir_()
 require_mount_list_()
 {
   local mount_list_fail='cannot read table of mounted file systems'
-  df 2>&1 | grep -F "$mount_list_fail" >/dev/null &&
+  df --local 2>&1 | grep -F "$mount_list_fail" >/dev/null &&
     skip_ "$mount_list_fail"
 }
 
